--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,30 +7,16 @@
 </p>
   <div class="outer">
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue tortor
-    eget pulvinar lobortis. Vestibulum ante ipsum primis in faucibus orci luctus
-    et ultrices posuere cubilia Curae; Nam ac dolor augue. Pellentesque mi mi,
-    laoreet et dolor sit amet, ultrices varius risus. Nam vitae iaculis elit.
-    Aliquam mollis interdum libero. Sed sodales placerat egestas. Vestibulum ut
-    arcu aliquam purus viverra dictum vel sit amet mi. Duis nisl mauris, aliquam
-    sit amet luctus eget, dapibus in enim. Sed velit augue, pretium a sem
-    aliquam, congue porttitor tortor. Sed tempor nisl a lorem consequat, id
-    maximus erat aliquet. Sed sagittis porta libero sed condimentum. Aliquam
-    finibus lectus nec ante congue rutrum. Curabitur quam quam, accumsan id
-    ultrices ultrices, tempor et tellus.
+      Microsoft HoloLens is a virtual reality (VR) headset with transparent lenses for 
+    an augmented reality experience. According to Microsoft, HoloLens is a “fully untethered,
+    see-through holographic computer.” HoloLens allows users to experience 3D holographic images
+    as though they are a part of their environment.
   </p>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue tortor
-    eget pulvinar lobortis. Vestibulum ante ipsum primis in faucibus orci luctus
-    et ultrices posuere cubilia Curae; Nam ac dolor augue. Pellentesque mi mi,
-    laoreet et dolor sit amet, ultrices varius risus. Nam vitae iaculis elit.
-    Aliquam mollis interdum libero. Sed sodales placerat egestas. Vestibulum ut
-    arcu aliquam purus viverra dictum vel sit amet mi. Duis nisl mauris, aliquam
-    sit amet luctus eget, dapibus in enim. Sed velit augue, pretium a sem
-    aliquam, congue porttitor tortor. Sed tempor nisl a lorem consequat, id
-    maximus erat aliquet. Sed sagittis porta libero sed condimentum. Aliquam
-    finibus lectus nec ante congue rutrum. Curabitur quam quam, accumsan id
-    ultrices ultrices, tempor et tellus.
+      Django has a lot of documentation. A high-level overview of how it's organized will help you 
+    know where to look for certain things: Tutorials take you by the hand through a series of steps 
+    to create a web application.Is Django a good career? Yes. People have been using Django development 
+    to earn a living. So, if you intend to find a job as a Python Web Developer, the recommendation is to choose Django.
   </p>
   <div class="box" id="one">One</div>
 </div>
